--- a/styles/header/index.scss
+++ b/styles/header/index.scss
@@ -105,6 +105,9 @@
 
 .main-navbar {
   background: #262626;
+  @media screen and (max-width:1100px) {
+    display: none;
+  }
   ul {
     li {
       display: inline-block;
