--- a/styles/model.css
+++ b/styles/model.css
@@ -24,6 +24,31 @@
 
 .mobile-modal {
   width: 100%;
-  height: 100%;
-  background-color: #222222;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+}
+.card-header {
+  padding: 10px 0px !important;
+  background-color: #f5f5f5 !important;
+  border-bottom: 1px solid #3f3f3f !important;
+}
+.card-header .btn-primary {
+  background-color: #f5f5f5;
+  color: black;
+  border: 0px;
+  padding: 0.3rem 0rem;
+}
+.card-header .btn-primary:hover,
+.card-header .btn-primary:active {
+  background-color: transparent;
+  color: black;
+  border: 0px;
+}
+.card {
+  background-color: #f5f5f5 !important;
+}
+.card a,
+.card a:hover {
+  color: #3f3f3f;
+  text-decoration: none;
 }
