--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,28 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @import "./footer/index.scss";
 @import "./header/index.scss";
 @import "./header/mobileNavbar.scss";
 @import "./homepage/index.scss";
 @import "./searchbar/index.scss";
+@import "./productCard/index.scss";
+@import "./about/index.scss";
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-body{
-    font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
 }
 
-a{
+a {
+  text-decoration: none;
+  &:hover {
     text-decoration: none;
-&:hover{
-    text-decoration: none;
+  }
 }
-}
-li{
-    list-style: none;
+li {
+  list-style: none;
 }
