--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,6 +7,9 @@
 @import "./searchbar/index.scss";
 @import "./productCard/index.scss";
 @import "./about/index.scss";
+@import "./hero.scss";
+@import "./contact.scss";
+@import "./productDetail.scss";
 
 * {
   margin: 0;
