--- a/styles/footer/index.scss
+++ b/styles/footer/index.scss
@@ -1,95 +1,94 @@
-footer{
-    background: #000000;
-    padding: 40px 0px;
-    .contact-us{
-        h3{
-            color: #C6834D;
-        }
-        span{
-            color: #C6834D;
-            font-size: 16px;
-            font-weight: 600;
-        }
-        p{
-            color: #fff;
-            font-size: 14px;
-            font-weight: 600;
-        }
+footer {
+  background: #000000;
+  padding: 40px 0px;
+  .contact-us {
+    h3 {
+      color: #c6834d;
     }
-    .quick-links{
-        h3{
-            color: #C6834D;
-        }
-        li{
-            
-            margin-left: 1rem;
-            margin-bottom: 1.3rem;
-            a{
-                color: #fff;
-                font-size: 14px;
-                font-weight: 600;
-                &:hover{
-                    text-decoration: none;
-                }
-
-            }
-            &::before {
-                content: "\2022";  
-                color: #C6834D; 
-                font-weight: bold; 
-                display: inline-block; 
-                width: 1em; 
-                margin-left: -1em; 
-              }
-              
-        }
-        .social{
-            li{
-                display: inline-block;
-                list-style: none;
-                &::before {
-                content: "";  
-                color: #000; 
-                font-weight: bold; 
-                display: inline-block; 
-                width: 1em; 
-                margin-left: -1em;
-              }
-            }
-            .social-icons{
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                background: #C6834D;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                .icon{
-                    color: #fff;
-                    font-size:25px;
-                }
-            }
-            .facebook{
-                background: #355088;
-            }
-            .twitter{
-                background: #1A91D9;
-            }
-            .linkedin{
-                background: #006BA3;
-            }
-        }
+    span {
+      color: #c6834d;
+      font-size: 16px;
+      font-weight: 600;
     }
-    
+    p {
+      color: #fff;
+      font-size: 14px;
+      font-weight: 600;
+    }
+  }
+  .quick-links {
+    h3 {
+      color: #c6834d;
+    }
+    li {
+      margin-left: 1rem;
+      margin-bottom: 1.3rem;
+      a {
+        color: #fff;
+        font-size: 14px;
+        font-weight: 600;
+        &:hover {
+          text-decoration: none;
+        }
+      }
+      &::before {
+        content: "\2022";
+        color: #c6834d;
+        font-weight: bold;
+        display: inline-block;
+        width: 1em;
+        margin-left: -1em;
+      }
+    }
+    .social {
+      li {
+        display: inline-block;
+        list-style: none;
+        &::before {
+          content: "";
+          color: #000;
+          font-weight: bold;
+          display: inline-block;
+          width: 1em;
+          margin-left: -1em;
+        }
+      }
+      .social-icons {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background: #c6834d;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        .icon {
+          color: #fff;
+          font-size: 25px;
+        }
+      }
+      .facebook {
+        background: #355088;
+      }
+      .twitter {
+        background: #1a91d9;
+      }
+      .linkedin {
+        background: #006ba3;
+      }
+      .instagram {
+        background: #d22e72;
+      }
+    }
+  }
 }
-.footer-bottom{
-    background: #C6834D;
-    padding:10px 0px;
-    p{
-        text-align: center;
-        font-size: 15px;
-        font-weight: 700;
-        color: #000000;
-       
-    }
+.footer-bottom {
+  background: #c6834d;
+  padding: 10px 0px;
+  p {
+    text-align: center;
+    font-size: 15px;
+    font-weight: 700;
+    color: #000000;
+  }
 }
