--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -10,6 +10,7 @@
   background: transparent !important;
   margin: 0 auto;
   margin-bottom: 0px;
+  justify-content: center;
   li {
     a {
       color: #222222;
