--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @import "./footer/index.scss";
 @import "./header/index.scss";
@@ -10,6 +11,8 @@
 @import "./hero.scss";
 @import "./contact.scss";
 @import "./productDetail.scss";
+@import "./cart.scss";
+@import "./checkout.scss";
 
 * {
   margin: 0;
@@ -18,7 +21,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif !important;
 }
 
 a {
