--- a/styles/homepage/index.scss
+++ b/styles/homepage/index.scss
@@ -143,3 +143,45 @@
     }
   }
 }
+
+.number-span {
+  a {
+    color: #222222;
+    margin: 0px 5px;
+  }
+}
+.sort-span {
+  position: relative;
+  &:hover {
+    cursor: pointer;
+    .sort-list {
+      display: block;
+    }
+  }
+  .sort-list {
+    position: absolute;
+    width: 200px;
+    top: 100%;
+    right: 0%;
+    z-index: 1;
+    background: #fff;
+    padding: 10px;
+    text-align: left;
+    display: none;
+    li {
+      border-radius: 5px;
+      padding: 5px 10px;
+      &:hover {
+        background: #000000;
+        a {
+          color: #fff;
+          text-decoration: none;
+        }
+      }
+      a {
+        font-size: 13px;
+        color: #222222;
+      }
+    }
+  }
+}
