--- a/styles/homepage/index.scss
+++ b/styles/homepage/index.scss
@@ -100,8 +100,9 @@
 .head-title {
   h2 {
     color: #222222;
-    font-size: 45px;
+    font-size: 35px;
     font-weight: 700;
+    letter-spacing: 1px;
   }
   hr {
     width: 150px;
