--- a/styles/productCard/index.scss
+++ b/styles/productCard/index.scss
@@ -9,8 +9,7 @@
   .product-img {
     width: 100%;
     height: 200px;
-    background: url("../../assests/images/leather-tanning-1.jpg") no-repeat
-      center;
+    background: no-repeat center;
     border-radius: 5px 5px 0px 0px;
     .overlay {
       display: none;
