--- a/styles/style.scss
+++ b/styles/style.scss
@@ -13,6 +13,8 @@
 @import "./productDetail.scss";
 @import "./cart.scss";
 @import "./checkout.scss";
+@import "./loginform.scss";
+@import "./profile.scss";
 
 * {
   margin: 0;
