--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,3 +35,16 @@ a {
 li {
   list-style: none;
 }
+
+.detail-add {
+  .add-to-cart {
+    background: #fc4f4f;
+    border-radius: 10px;
+    border: none;
+    padding: 5px 20px;
+    color: #fff;
+    .icons {
+      margin-right: 1rem;
+    }
+  }
+}
