--- a/styles/model.css
+++ b/styles/model.css
@@ -57,3 +57,32 @@
 .carousel-control-prev {
   z-index: 0 !important;
 }
+
+/* tabs */
+
+.nav-tabs .nav-link.active {
+  background-color: #c6834d !important;
+  border-color: #fff;
+  color: #fff !important;
+}
+.nav-tabs .nav-link {
+  color: #000 !important;
+}
+.nav-tabs .nav-link:hover {
+  border: 1px solid #c6834d !important;
+}
+
+.kep-login-facebook {
+  background-color: transparent !important;
+  color: #000 !important;
+  border: none;
+  border-radius: 50%;
+}
+.my-facebook-button-class {
+  width: 40px;
+  height: 40px;
+  background-color: transparent !important;
+  /* border: none !important; */
+  border: 1px solid silver;
+  border-radius: 50%;
+}
